--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,9 @@ joblib>=1.3.0
 plotly>=5.17.0
 rich>=14.0.0
 scikit-learn==1.4.0
-SpeechRecognition>=3.10.0      
-pyaudio>=0.2.13                 
-pyttsx3>=2.90                   
-sounddevice>=0.4.6              
-wavio>=0.0.7
+#SpeechRecognition>=3.10.0      
+#pyaudio>=0.2.13                 
+#pyttsx3>=2.90                   
+#sounddevice>=0.4.6              
+#wavio>=0.0.7
+
